@@ -39,6 +39,7 @@ v15.0.00
 		System: fixed Sign In With Google to fix missing token refresh issue
         System: fixed timezone not being set in CLI scripts
 		System: fixed bug preventing activity day from being correctly shown in Parent Dashboard
+        System: added login options to Login with Google button
 		Attendance: fixed GROUP BY issue in moduleFunctions.php when MySQL is using only_full_group_by
 		Attendance: adjusted attendance checking CLI script to only include lessons whose start time has already passed
 		Attendance: show staff dashboard link to attendance only if user has access to Form Group attendance
